Bug 520807 - Windows 7 taskbar previews scales out of screen r=rflint r=jmathies